# quant-examples

./: .gitignore  README.md  brownian_bridge.ipynb  cos_method.ipynb  dynamic_nelson_siegel_kalman_filter.ipynb  euler_milstein.ipynb  fbm.ipynb  fractional_brownian_motion.ipynb  gaussian_mixture_models.ipynb  gaussian_pca.ipynb  ica_pca.ipynb  inverse_gaussian.ipynb  levy_construction_brownian_motion.ipynb  modern_portfolio_theory.ipynb  pandas_datareader.ipynb  pyproject.toml  yield_curve_pca.ipynb
stats/: gaussian_mixtures.py
stochastic/: brownian.py  fbm.py  yield_curve.py
utils/: utils_plot.py
