[project]
name = "quant-examples"
version = "0.1.0"
description = "Collection of quantitative finance examples and tutorials."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "lab>=8.5",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pandas-datareader>=0.10.0",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "yfinance>=0.2.66",
]
